# boolsched

./: LICENSE.txt  README.md  pyproject.toml
boolsched/: __init__.py  schedule.py
tests/: test_schedule.py
