[project]
name = "boolsched"
version = "0.1.3"
description = "A programmatic, composable scheduling system using boolean logic"
authors = [
  { name="Hugo Chargois", email="hugo.chargois@free.fr" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/hchargois/boolsched"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
